# KrakenExport

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  CsvExporter.cpp  CsvExporter.hpp  Exporter.hpp  README.md  Reward.h  Reward.hpp  config.txt.template  main.cpp
